# heicview

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-03-19-heic-wic-codec.md
docs/superpowers/specs/: 2026-03-19-heic-wic-codec-design.md
installer/: install.ps1  uninstall.ps1
src/: class_factory.cpp  class_factory.h  codec.cpp  codec.h  com_counter.h  common.h  dll_main.cpp  frame_decode.cpp  frame_decode.h  guids.h  heic_wic.def  metadata_reader.cpp  metadata_reader.h  registration.cpp  registration.h  thumbnail_provider.cpp  thumbnail_provider.h  version.rc
test/: test_decode.cpp  test_wic_discovery.cpp
test/samples/: test.heic
